--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
-[dependencies]
-# nom = "5.0.1"
-nom = { git = "https://github.com/Geal/nom" }
+[dependencies.nom]
+git = "https://github.com/Geal/nom"
+#default-features = false
+
