--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,10 @@ edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[dependencies]
+lexical_070 = { version = "0.7", package = "lexical-core" }
+lexical_043 = { version = "0.4.3", package = "lexical-core" }
+
 [dependencies.nom]
 git = "https://github.com/Geal/nom"
 #default-features = false
